--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="calculator">
         <h1>Javascript<br><span>Age Calculator</span></h1>
         <div class="input-box">
-            <input type="data" placeholder="please input your date" id="date">
+            <input type="date" placeholder="please input your date" id="date">
             <button onclick="calculateAge()">Calculate</button>
         </div>
         <div class="result-form">
-        <p id="result"></p>
+        <p id="result">Nanti hasilnya akan muncul di sini...</p>
     </div>
     </div>
 </div>
